--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,157 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+body{
+	width: 1000px;
+	margin: 0 auto;
+}
+nav {
+	/*boreder: 1px solid red;**/
+	margin-top: 20px;
+	display:inline-block;
+	width: 100%;
+	height: 60px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	
+}
+
+nav .logo {
+	display: inline-block;
+}
+nav a{
+	text-decoration: none;
+	color:gray;
+}
+
+header{
+/*boreder: 1px solid red;**/
+display: flex; 
+justify-content: space-around;
+margin: 40px;
+align-items: center; 
+}
+
+header .left-container{
+	/*border: 1px solid black;*/
+font-size: 80px;
+display: inline-block;
+}
+
+header .left-container .button .header-img{
+	display: inline-block;
+	vertical-align: top;
+	} 
+
+header .h1{
+	font-size: 70px;
+	text-align: center; 
+}
+
+.button{
+	/*border: 1px solid black;*/
+	widows: 50%;
+	font-size:20px;
+	padding: 5px 10px;
+}
+
+.button a{
+	text-decoration:none;
+	color: black;
+	border: .5px solid black;
+	margin: 0px 10px 10px 0px auto; /*to center the button*/
+	padding: 10px;
+}
+
+hr{
+	border: .5px solid  black; /* border top increases the thickness of the line, don't comment out the border here*/
+}
+
+.top-paragraphs{
+	display: flex;
+	margin: 20px;
+	 /*manipulate this to fix top paragraphs*/
+}
+.middle-img {
+	width: 100%;
+	margin: 20px 0; /* to put space around the image*/
+}
+.bottom-paragraphs{
+  display: flex;
+  margin: 20px;
+}
+
+.contact-info{
+line-height: 2;
+margin: 30px 0;
+}
+
+footer .copyright{
+	text-align: center;
+}
 
