--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,6 @@ body{
 nav{
 	margin-top: 20px;
 	width: 100%;
-	height: 60px;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;	
@@ -135,7 +134,7 @@ hr{
 	width: 98%;
     display: block;
     margin-left: auto;
-    margin-right: auto;
+	margin-right: auto;
 }
 .bottom-paragraphs{
   display: flex;
@@ -144,11 +143,12 @@ hr{
 
 .contact-info{
 line-height: 2;
-margin: 30px 0;
+margin: 30px 20px 20px 20px;
 }
 
 footer .copyright{
 	text-align: center;
+	margin: 20px 0 20px 0;
 }
 
 /*Tablet View*/
@@ -171,27 +171,30 @@ nav .logo{
 nav {
 	display: flex;
 	flex-direction: column;
-	text-decoration: none;
-	align-items: center;
 }
 
 nav a{
 	width: 100%;
-	border-top: 1px solid black; 
-	border-bottom: 1px solid black;
+	border: 1px solid gray; 
+	text-decoration: none;
+	display: flex;
+	justify-content: center;
+	padding: 20px 0 20px 0;
 }
 nav .logo{
    order: -1;
+   padding: 0 0 20px 0;
 }
+
 .top-paragraphs{
 	display: flex;
 	flex-direction: column;
-	margin: 20px 0 20px 0;
+	margin: 20px 20px;
 }
 
 .bottom-paragraphs{
 	display: flex;
 	flex-direction: column;
-	margin: 20px 0 20px 0;
+	margin: 20px 20px;
 	}
 }
